# cosmic_intruders

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_A.txt  README.md  package.json
_history_/: HISTORY_READ_ME_FIRST.txt
assets-web/Atlases/: GameAtlas.ss
assets/Atlases/: SplashAtlas.ss
docs/: CHANGELOG.txt  game.data  game.js  game.wasm  site_info
game/: main.cpp  version
game/Game/include/GamePlay/Cannon/: Cannon.h
game/Game/include/GamePlay/Enemy/: Alien.h
game/Game/include/GamePlay/Formation/: Formation.h
game/Game/include/GamePlay/GameManager/: GameManager.h
game/Game/include/GamePlay/GamePlayObject/: IGamePlayObject.h
game/Game/include/GamePlay/Hud/: GameOverHUD.h  LevelHUD.h  LivesHUD.h  ScoreHUD.h
game/Game/include/GamePlay/Laser/: AlienLaser.h  AlienLaserNormal.h  AlienLaserPowered.h  CannonLaser.h  ILaser.h  LaserHolder.h
game/Game/include/GamePlay/Level/: Level.h
game/Game/include/GamePlay/Player/: Player.h
game/Game/include/GamePlay/Scenery/: Ground.h  ISceneryObject.h  Shield.h
game/Game/include/GamePlay/UFO/: UFO.h
game/Game/include/Helpers/: Bounds.h  GameUtils.h  SceneHelper.h  Storage.h  Typewritter.h  Version.h
game/Game/include/Scenes/: GameScene.h  MenuScene.h  SplashScene.h
game/Game/src/Gameplay/Cannon/: Cannon.cpp
game/Game/src/Gameplay/Enemy/: Alien.cpp
game/Game/src/Gameplay/Formation/: Formation.cpp
game/Game/src/Gameplay/GameManager/: GameManager.cpp
game/Game/src/Gameplay/GamePlayObject/: IGamePlayObject.cpp
game/Game/src/Gameplay/Hud/: GameOverHUD.cpp  LevelHUD.cpp  LivesHUD.cpp  ScoreHUD.cpp
game/Game/src/Gameplay/Laser/: AlienLaser.cpp  AlienLaserNormal.cpp  AlienLaserPowered.cpp  CannonLaser.cpp  ILaser.cpp  LaserHolder.cpp
game/Game/src/Gameplay/Level/: Level.cpp
game/Game/src/Gameplay/Player/: Player.cpp
game/Game/src/Gameplay/Scenery/: Ground.cpp  ISceneryObject.cpp  Shield.cpp
game/Game/src/Gameplay/UFO/: UFO.cpp
game/Game/src/Helpers/: GameUtils.cpp  SceneHelper.cpp  Typewritter.cpp
game/Game/src/Helpers/private/desktop/: Storage.cpp
game/Game/src/Helpers/private/emscripten/: Storage.cpp
game/Game/src/Scenes/: GameScene.cpp  MenuScene.cpp  SplashScene.cpp
html/: index.html
lib/Cooper/: CMakeLists.txt
lib/Cooper/Cooper/: Cooper.h
lib/Cooper/Cooper/include/Backports/: SDL.h
lib/Cooper/Cooper/include/Game/: Entity.h  Game.h  RES.h
lib/Cooper/Cooper/include/Graphics/: Graphics.h  TextEntity.h  TextureAtlas.h  TextureEntity.h
lib/Cooper/Cooper/include/Input/: Input.h
lib/Cooper/Cooper/include/Log/: Log.h
lib/Cooper/Cooper/include/Macros/: Assert.h  Disallow.h  Macros.h  Singleton.h  SmartPointers.h  Verify.h
lib/Cooper/Cooper/include/Macros/private/: MacrosHelpers.h
lib/Cooper/Cooper/include/Math/: Color.h  Constants.h  Math.h  Operations.h  Point.h  Rect.h  Tween.h  Vec2.h
lib/Cooper/Cooper/include/Memory/: Memory.h
lib/Cooper/Cooper/include/Sound/: Sound.h
lib/Cooper/Cooper/include/String/: StringUtils.h
lib/Cooper/Cooper/include/Timer/: Timer.h
lib/Cooper/Cooper/src/Game/: Entity.cpp  Game.cpp  RES.cpp
lib/Cooper/Cooper/src/Graphics/: Graphics.cpp  TextEntity.cpp  TextureAtlas.cpp  TextureEntity.cpp
lib/Cooper/Cooper/src/Input/: Input.cpp
lib/Cooper/Cooper/src/Log/: Log.cpp
lib/Cooper/Cooper/src/Macros/private/: MacrosHelpers.cpp
lib/Cooper/Cooper/src/Sound/: Sound.cpp
lib/Cooper/Cooper/src/Sound/private/: AudioLib.cpp  AudioLib.h  AudioValues.h
lib/Cooper/Cooper/src/Sound/private/SDL/: AudioValues.cpp
lib/Cooper/Cooper/src/Sound/private/emscripten/: AudioValues.cpp
lib/Cooper/Cooper/src/String/: StringUtils.cpp
lib/Cooper/Cooper/src/Timer/: Timer.cpp
lib/Cooper/lib/CoreRandom/: .gitignore  CMakeLists.txt  README.md
lib/Cooper/lib/CoreRandom/CoreRandom/: CoreRandom.h
lib/Cooper/lib/CoreRandom/CoreRandom/include/: CoreRandom_Utils.h  Random.h
lib/Cooper/lib/CoreRandom/CoreRandom/src/: Random.cpp
lib/Cooper/lib/CoreRandom/docs/: CHANGELOG.txt  Doxyfile  mainpage.dox  site_info
lib/Cooper/lib/CoreRandom/scripts/: update_version.sh
release_files/web/: cosmic.html  index.css  index.html  index.js
resources/: readme-release.txt
resources/gnu_linux/: README.md
resources/web/: index.html
resources/web/css/: page.css
scripts/: build-clean.ps1  build-game-windows.ps1  build-game.ps1  build-game.sh  build-project-web-page.ps1  build-static.sh  build.sh  build_web.sh  bump_version.sh  clean-everything.sh  clean.sh  deploy.sh  files_to_zip.sh  full-build.sh  generate-release-zip.ps1  generate-release-zip.sh  install-dependencies.sh  publilsh-webpage.sh  update_version.sh
